fix: add constants & Stream.toList()